--- a/Ex1.1.html
+++ b/Ex1.1.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Form Validation</h1>  
+  <h1>Form Validation</h1> 
+  <h2>Title</h2>
   <form>
     <input type="text" id="Name">
     <label for="Name" id="Name" name="Name">Name</label> <br>
